more sophisticated closeread sections for equation & intervention

--- a/spillover-of-violence/spillover-of-violence.html
+++ b/spillover-of-violence/spillover-of-violence.html
@@ -69,10 +69,10 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-sidebar: white;
---cr-section-background-color: white;
+          --cr-narrative-background-color-overlay: grey;
 --cr-narrative-text-color-sidebar: black;
---cr-narrative-background-color-overlay: grey;
+--cr-narrative-background-color-sidebar: white;
+--cr-section-background-color: white;
         }
       </style>
     
@@ -136,7 +136,27 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-analysis">
 <div class="narrative">
-<p>We employed multilevel logistic regression models to estimate the degree to which country-level violence—measured by rates of terrorism and political conflict, homicide, and women’s exposure to IPV—was associated with parental physical abuse after controlling for norms justifying violence against women and children and socio-demographic factors.</p>
+<p>We employed multilevel logistic regression models.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-pan-to="25%,50%" data-focus-on="cr-analysis" data-scale-by="1.5">
+<div class="narrative">
+<p>We estimated the factors associated with parental physical abuse.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-pan-to="-30%,50%" data-focus-on="cr-analysis" data-scale-by="1.5">
+<div class="narrative">
+<p>We controlled for country-level violence—measured by rates of terrorism and political conflict, homicide, and women’s exposure to IPV</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-pan-to="-70%,50%" data-focus-on="cr-analysis" data-scale-by="1.5">
+<div class="narrative">
+<p>We also controlled for other covariates, including norms justifying violence against women and children and socio-demographic factors.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-pan-to="-90%,50%" data-focus-on="cr-analysis" data-scale-by="1.5">
+<div class="narrative">
+<p>We accounted for the country in which study participants lived.</p>
 </div>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-results1">
@@ -152,6 +172,10 @@ ul.task-list li input[type="checkbox"] {
 <div class="trigger new-trigger" data-focus-on="cr-interventions">
 <div class="narrative">
 <p>Interventions aimed at reducing abusive parenting practices in LMICs may benefit from efforts to reduce social norms that support violence against women and children.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-focus-on="cr-interventions2">
+<div class="narrative">
 <p>These interventions should be responsive to trauma-informed approaches that recognize the effects of macro-level violence.</p>
 </div>
 </div>
@@ -192,8 +216,8 @@ ul.task-list li input[type="checkbox"] {
 <div id="fig-2" class="cell-output-display quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="plotly html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-9c533b1572b007169d4c" style="width:100%;height:464px;"></div>
-<script type="application/json" data-for="htmlwidget-9c533b1572b007169d4c">{"x":{"visdat":{"c7e45b509e69":["function () ","plotlyVisDat"]},"cur_data":"c7e45b509e69","attrs":{"c7e45b509e69":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#009edb","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(0,158,219,1)"],["1","rgba(0,158,219,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-02ecd55b3af08a454c80" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-02ecd55b3af08a454c80">{"x":{"visdat":{"cdff14be35d1":["function () ","plotlyVisDat"]},"cur_data":"cdff14be35d1","attrs":{"cdff14be35d1":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#009edb","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(0,158,219,1)"],["1","rgba(0,158,219,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Countries in UNICEF MICS Data
@@ -239,13 +263,45 @@ Figure&nbsp;1: Countries in UNICEF MICS Data
 <div id="cr-results2" class="scale-to-fill sticky">
 <div class="cell">
 <div class="cell-output-display">
-<div class="plotly html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-5aa7c45cf5b8a65e9eb8" style="width:100%;height:464px;"></div>
-<script type="application/json" data-for="htmlwidget-5aa7c45cf5b8a65e9eb8">{"x":{"visdat":{"c7e436c599af":["function () ","plotlyVisDat"]},"cur_data":"c7e436c599af","attrs":{"c7e436c599af":{"x":{},"y":{},"text":{},"hoverinfo":"text","marker":{"size":15,"color":"red","line":{"color":"black","width":2}},"mode":"lines+markers","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"title":"As political violence and terrorism increase, <br>so does the probability of physical abuse.","xaxis":{"domain":[0,1],"automargin":true,"title":"percentile of political violence and terrorism"},"yaxis":{"domain":[0,1],"automargin":true,"title":"probability of abuse"},"hoverlabel":{"bgcolor":"white"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"x":[0,50,99],"y":[12.25,12.26,15.789999999999999],"text":["percentile:  0 <br>probability of abuse: 12.25","percentile:  50 <br>probability of abuse: 12.26","percentile:  99 <br>probability of abuse: 15.79"],"hoverinfo":["text","text","text"],"marker":{"color":"red","size":15,"line":{"color":"black","width":2}},"mode":"lines+markers","type":"scatter","error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-6be023ca66b2a9ae64fb" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-6be023ca66b2a9ae64fb">{"x":{"visdat":{"cdff4203279d":["function () ","plotlyVisDat"]},"cur_data":"cdff4203279d","attrs":{"cdff4203279d":{"x":{},"y":{},"text":{},"hoverinfo":"text","marker":{"size":15,"color":"red","line":{"color":"black","width":2}},"mode":"lines+markers","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"title":"As political violence and terrorism increase, <br>so does the probability of physical abuse.","xaxis":{"domain":[0,1],"automargin":true,"title":"percentile of political violence and terrorism"},"yaxis":{"domain":[0,1],"automargin":true,"title":"probability of abuse"},"hoverlabel":{"bgcolor":"white"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"x":[0,50,99],"y":[12.25,12.26,15.789999999999999],"text":["percentile:  0 <br>probability of abuse: 12.25","percentile:  50 <br>probability of abuse: 12.26","percentile:  99 <br>probability of abuse: 15.79"],"hoverinfo":["text","text","text"],"marker":{"color":"red","size":15,"line":{"color":"black","width":2}},"mode":"lines+markers","type":"scatter","error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 <p>As political violence and terrorism increase, so does the probability of physical abuse</p>
 </div>
 </div>
 </div>
 <div id="cr-interventions" class="scale-to-fill sticky">
+<div class="cell" data-layout-align="default">
+<div class="cell-output-display">
+<div>
+<p></p><figure class="figure"><p></p>
+<div>
+<pre class="mermaid mermaid-js">flowchart TB
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef orange fill:#D86018,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  interventions:::orange --&gt; IPV[lower levels of \nendorsement of IPV]:::blue
+  
+  IPV --&gt; pabuse[less physical child abuse]:::maize
+  
+  interventions --&gt; pabuse
+  
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+</pre>
+</div>
+<p></p></figure><p></p>
+</div>
+</div>
+</div>
+</div>
+<div id="cr-interventions2" class="scale-to-fill sticky">
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div>
